--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -295,26 +295,28 @@ document.getElementById("defaultOpen").click();
 	
 <div class="contentblock row justify-content-start">
 	<div class="textblock_right col-12 col-sm-4 col-lg-3 order-2">
-		
-			<a href="http://cineticle.com/reviews-/1336-digest-2016-june.html"><h3>«Асфальт»</h3></a>
-			<p>
-				Юный сосед Юппер сочиняет себе имя и шутя говорит о погибших родителях, неудачник в коляске фантазирует, что он фотограф из National Geographic, объездивший две трети мира и, чтобы придать своей истории правдоподобности, делает снимки с экрана телевизора на старый полароид.<br>
+		<a href="http://cineticle.com/reviews-/1336-digest-2016-june.html">
+			<h3>«Асфальт»</h3>
+		</a>
+		<p>
+Юный сосед Юппер сочиняет себе имя и шутя говорит о погибших родителях, неудачник в коляске фантазирует, что он фотограф из National Geographic, объездивший две трети мира и, чтобы придать своей истории правдоподобности, делает снимки с экрана телевизора на старый полароид.<br>
 <…> <br>
 В проникновенной сцене последнего ужина американец рассказывает арабке близкую ему теорию древних греков, видящих в каждой звезде глаз бога. До того не понимавшая ни слова, она внимает ему и отвечает песней, показывая — эта мысль ей близка, ей тоже нужно, чтобы её ожидание не было напрасным. В американце она видит и утерянного сына, и некий привет свыше, посланника по типу беккетовского мальчика, прибежавшего сказать, — вы ждите, ждите, он пока занят, но обязательно придёт.
-	</p>
+		</p>
+	</div>			
 	<div class="col-12 col-sm-6 order-1">
 		<img src="асфальт.jpg" class="imageblock_left img-fluid float-right" alt="Responsive image">
 	</div>
 </div>
 <div class="contentblock row justify-content-end">
 	<div class="textblock_right col-12 col-sm-4 col-lg-3 order-1">
-		
-			<a href="http://cineticle.com/reviews-/1336-digest-2016-june.html"><h3>«Голодные сердца»</h3></a>
-			<p>
-				Мина становится веганшей, и фильм из мелодрамы превращается в психотриллер, где важен не только и не столько сюжет, сколько планы и интерьеры.<br>
+		<a href="http://cineticle.com/reviews-/1336-digest-2016-june.html">
+			<h3>«Голодные сердца»</h3>
+		</a>
+		<p>
+Мина становится веганшей, и фильм из мелодрамы превращается в психотриллер, где важен не только и не столько сюжет, сколько планы и интерьеры.<br>
 Картина своей жанровой структурой, операторской работой и поведением главной героини отчетливо отсылает к классическим образцам, таким как «Отвращение» Романа Полански. С героиней Катрин Денёв героиню Альбы Рорвахер роднит и некий предметно-физиологический характер психоза. Там реакцию мог запустить стаканчик для чистки зубов, которым воспользовался чужак, здесь героиня столь же сильно помешана на чистоте, не подпускает к ребёнку незнакомцев, но главное, что её пугает, – это мясо.
-			</p>
-		
+		</p>
 	</div>
 	<div class="col-12 col-sm-6 order-2">
 		<img src="голодные сердца2.jpg" class="imageblock_left img-fluid float-left" alt="Responsive image">
@@ -328,20 +330,14 @@ document.getElementById("defaultOpen").click();
 
 <div class="contentblock row justify-content-center">
 	<div class="textblock_left col-12 col-sm-4 col-lg-3 order-1">
-		
-			<a href="https://www.iqconsultancy.ru/articles/kontrakt-risovalshchika-kuda-poyti-khudozhniku-varianty-programm-i-spetsialnostey/"><h3>Контракт рисовальщика: куда пойти художнику — варианты программ и специальностей</h3></a>
-			<p>Вариант четвертый: придумывать модную одежду
- <br>
-У вас безупречный вкус и вы точно знаете, какой пиджак будет идеально отражать внутренний мир того парня? Вам не дают покоя лавры Ива Сен-Лорана, Готье и Шанель?
- <br>
-Вероятно, вы мечтаете о мире моды. Но чтобы создавать модную одежду, которая найдет отклик у людей, недостаточно уметь рисовать и обладать хорошим вкусом. Стоит подумать о профильном образовании, где вы не только отшлифуете навыки рисунка, но и научитесь работать с материалами, делать выкройки, организовывать презентации коллекций и анализировать рынок. Кроме того, учеба в вузе — это возможность наладить связи с индустрией и получить доступ к профессиональным контактам, чтобы быстрее заявить о себе в мире моды.</p>
-		
+		<a href="https://www.iqconsultancy.ru/articles/kontrakt-risovalshchika-kuda-poyti-khudozhniku-varianty-programm-i-spetsialnostey/">
+			<h3>Контракт рисовальщика: куда пойти художнику — варианты программ и специальностей</h3>
+		</a>
 	</div>
 	<div class="textblock_right col-12 col-sm-4 col-lg-3 order-2">
-		
-		<a href="https://www.iqconsultancy.ru/articles/gruppa-russell"><h3>Группа Russell: что отличает элитные вузы Британии</h3></a>
-			<p>Не только британские, но и крупные международные компании признают ценность выпускников вузов Russell. Они заранее нацеливают на них своих хедхантеров и предлагают выпускникам отличные условия. Как заявляет генеральный директор группы Russell Венди Пиатт, зарплата выходцев из их университетов на 10% процентов выше, чем у других. Вузы группы Russell активно участвуют в карьерной судьбе своих студентов, не жалея на это средств: проводят индивидуальные консультации, стажировки, карьерные дни и ярмарки.
-			</p>
+		<a href="https://www.iqconsultancy.ru/articles/gruppa-russell">
+			<h3>Группа Russell: что отличает элитные вузы Британии</h3>
+		</a>
 	</div>
 </div>
 		
