--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -74,6 +74,7 @@ body {background: url("example1.jpg") no-repeat left top;
 
 
 .contentblock {padding-top:15px;padding-bottom:15px;     align-items: center!important;}
+	.contentblock-comm {padding-top:15px;padding-bottom:15px;     align-items: start!important;}
 
 .contentblock p {padding-top:10px;}
 
@@ -328,7 +329,7 @@ document.getElementById("defaultOpen").click();
 </div>
 
 
-<div class="contentblock row justify-content-center">
+<div class="contentblock-comm row justify-content-center">
 	<div class="textblock_left col-12 col-sm-4 col-lg-3 order-1">
 		<a href="https://www.iqconsultancy.ru/articles/kontrakt-risovalshchika-kuda-poyti-khudozhniku-varianty-programm-i-spetsialnostey/">
 			<h3>Контракт рисовальщика: куда пойти художнику — варианты программ и специальностей</h3>
@@ -341,7 +342,7 @@ document.getElementById("defaultOpen").click();
 	</div>
 </div>
 		
-<div class="contentblock row justify-content-center">
+<div class="contentblock-comm row justify-content-center">
 	<div class="col-12 col-sm-6 order-2">
 		<a href="">
 			<img src="Снимок экрана 2018-04-04 в 15.24.13.png" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
@@ -354,7 +355,7 @@ document.getElementById("defaultOpen").click();
 	</div>
 </div>
 
-<div class="contentblock row justify-content-center">
+<div class="contentblock-comm row justify-content-center">
 	<div class="textblock_left col-12 col-sm-4 col-lg-3 order-1">	
 		<a href="">
 			<h3></h3>
@@ -373,7 +374,7 @@ document.getElementById("defaultOpen").click();
 	</div>
 </div>
 
-<div class="contentblock row justify-content-center">
+<div class="contentblock-comm row justify-content-center">
 	<div class="col-12 col-sm-6 order-1">
 		<a href="">
 			<img src="" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
