--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -323,6 +323,47 @@ document.getElementById("defaultOpen").click();
 		<img src="голодные сердца2.jpg" class="imageblock_left img-fluid float-left" alt="Responsive image">
 	</div>
 </div>
+<div class="contentblock row justify-content-start">
+	<div class="textblock_right col-12 col-sm-4 col-lg-3 order-2">
+		<a href="http://kinopokazhd2.tv/newsItem/show/223">
+			<h3>«Телохранитель» («История любви по-лондонски»)</h3>
+		</a>
+		<p>
+«Телохранитель» прямо-таки перенасыщен музыкой: там играет и “Subterranean Homesick Blues” Боба Дилана, и “Stray Cat Blues” The Rolling Stones, и другие композиции 60-х, но больше всего там группы Kasabian (гитарист группы Серджио Пиццорно даже заявлен композитором фильма). Очаровательная “La Fée Verte” звучит в картине так часто, что фильм рискует превратиться в клип, для которого песню зациклили на репите. И вообще guilty pleasure для "Телохранителя" – лучшее определение. Вероятно, так смотрит на свой дебют и сам режиссер, который до этого момента занимался серьезными сценариями для серьёзных людей, но вдруг послал всё к чёрту и под красивую постмодернистскую песню снял историю о том, как двум (даже трем, считая дворецкого) хорошим людям мешает идти по дороге из жёлтого кирпича непродуманное и полное ошибок прошлое.
+		</p>
+	</div>
+	<div class="col-12 col-sm-6 order-2">
+		<img src="телохранитель2.jpg" class="imageblock_left img-fluid float-left" alt="Responsive image">
+	</div>
+</div>
+<div class="contentblock row justify-content-end">
+	<div class="textblock_right col-12 col-sm-4 col-lg-3 order-1">
+		<a href="http://tricolortvmag.ru/article/movies/park-kultury-i-otdykha-ochen-grustnyy-romkom/?sphrase_id=52292">
+			<h3>«Парк культуры и отдыха»: очень грустный ромком</h3>
+		</a>
+		<p>
+Пусть на экране они влюбляются, глупо шутят, врезаются на своих дешевых машинах в деревья после загульных вечеринок, пусть они думают, ехать ли в Нью-Йорк за счастьем или остаться в набившей оскомину провинции, – всё это уже случилось 30 лет назад. Сейчас этим тинейджерам где-то по 47, и цитадель парка культуры для них осталась только в воспоминаниях как место, в котором у них еще была масса вариантов для маневра.
+		</p>
+	</div>
+	<div class="col-12 col-sm-6 order-2">
+		<img src="парк культуры и отдыха.jpg" class="imageblock_left img-fluid float-left" alt="Responsive image">
+	</div>
+</div>
+<div class="contentblock row justify-content-start">
+	<div class="textblock_right col-12 col-sm-4 col-lg-3 order-2">
+		<a href="http://www.cineticle.com/texts/1321-araki-jarry.html">
+			<h3>«Я плохо говорю по-польски, вы меня не поймете»(Грегг Араки и Альфред Жарри)</h3>
+		</a>
+		<p>
+		Читая роман, приходится пробираться через реально ощутимые дебри. Но в дебрях этих кроется совершенно чёткое определение патафизики, — насколько только может быть четким определение воображаемой науки. Впрочем, наука появилась позже, и позже даровала название группе драматургов, которые отдавали Жарри честь и благодарность. Сначала же была пьеса «Король Убю», провалившаяся и изменившая будущее театра (не только его). Пьеса стала взрывом-началом и открывалась с сообщения о том, что «действие происходит в Польше, а именно нигде».
+		</p>
+	</div>
+	<div class="col-12 col-sm-6 order-2">
+		<img src="араки-жарри.jpg" class="imageblock_left img-fluid float-left" alt="Responsive image">
+	</div>
+</div>
+
+ 
 
 <div id="txt_other" class="top_wrapper row justify-content-center" style="text-align:center;">
 	<div class="col-12"> <h5>Аналитические, рекламные и другие</h5> </div>
@@ -341,6 +382,20 @@ document.getElementById("defaultOpen").click();
 		</a>
 	</div>
 </div>
+<div class="contentblock-comm row justify-content-center">
+	<div class="textblock_left col-12 col-sm-4 col-lg-3 order-1">
+		<a href="http://kinopokaz.tv/newsItem/show/329">
+			<h3>Освещение одного из этапов скандала #oscarsowhite («#oscarsowhite: Ответный взгляд на бойкот»)</h3>
+		</a>
+	</div>
+	<div class="textblock_right col-12 col-sm-4 col-lg-3 order-2">
+		<a href="https://www.iqconsultancy.ru/articles/zhurnalist/">
+			<h3>Работа журналистом: как устроиться в The Guardian, NY Times или BBC</h3>
+		</a>
+	</div>
+</div>
+
+
 		
 <div class="contentblock-comm row justify-content-center">
 	<div class="col-12 col-sm-6 order-2">
@@ -394,15 +449,27 @@ document.getElementById("defaultOpen").click();
 <div id="txt_events" class="top_wrapper row justify-content-center" style="text-align:center;">
 	<div class="col-12"> <h5>События</h5> </div>
 </div>
+	  Сценарий церемонии награждения российского финала конкурса Imagine Cup
+2017. 
+	  imaginecup.png
 
 <div id="lections" class="row justify-content-center" style="padding-top:25px;">
 		<div class="col-12 col-sm-8 col-lg-6"> <h1>ЛЕКЦИИ</h1> </div>
 </div>
+	  Я составила и прочла авторский курс лекций о кино.
+	  tnp.png
 
 <div id="contacts" class="row justify-content-center" style="padding-top:25px;">
 		<div class="col-12 col-sm-8 col-lg-6"> <h1>КОНТАКТЫ</h1> </div>
 </div>
 
+	  Алина Кузьо
+Редактор, режиссер промо
++7 (911) 847-21-63
+alinakuzio@yandex.ru
+ВКонтакте
+facebook
+медиум
 
 
   </body>
