--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -411,38 +411,73 @@ document.getElementById("defaultOpen").click();
 </div>
 
 <div class="contentblock-comm row justify-content-center">
-	<div class="textblock_left col-12 col-sm-4 col-lg-3 order-1">	
-		<a href="">
-			<h3></h3>
-		</a>
-		<p>
-			
-		</p>
-	</div>
-	<div class="textblock_right col-12 col-sm-4 col-lg-3 order-2">
-		<a href="">
-			<h3></h3>
-		</a>
-		<p>
-			
-		</p>
-	</div>
-</div>
-
-<div class="contentblock-comm row justify-content-center">
 	<div class="col-12 col-sm-6 order-1">
 		<a href="">
-			<img src="" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
+			<img src="03.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
 		</a>		
 	</div>
 	<div class="col-12 col-sm-6 order-2">
 		<a href="">
-			<img src="" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
+			<img src="04.png" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
 		</a>
 	</div>
 </div>
+<div class="contentblock-comm row justify-content-center">
+	<div class="col-12 col-sm-6 order-1">
+		<a href="">
+			<img src="05.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
+		</a>		
+	</div>
+	<div class="col-12 col-sm-6 order-2">
+		<a href="">
+			<img src="06.png" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
+		</a>
+	</div>
+</div>
+<div class="contentblock-comm row justify-content-center">
+	<div class="col-12 col-sm-6 order-1">
+		<a href="">
+			<img src="07.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
+		</a>		
+	</div>
+	<div class="col-12 col-sm-6 order-2">
+		<a href="">
+			<img src="08.png" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
+		</a>
+	</div>
+</div>
+<div class="contentblock-comm row justify-content-center">
+	<div class="col-12 col-sm-6 order-1">
+		<a href="">
+			<img src="09.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
+		</a>		
+	</div>
+	<div class="col-12 col-sm-6 order-2">
+		<a href="">
+			<img src="10.png" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
+		</a>
+	</div>
+</div>
+<div class="contentblock-comm row justify-content-center">
+	<div class="col-12 col-sm-6 order-1">
+		<a href="">
+			<img src="11.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
+		</a>		
+	</div>
+	<div class="col-12 col-sm-6 order-2">
+		<a href="">
+			<img src="12.png" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
+		</a>
+	</div>
+</div>
+<div class="contentblock-comm row justify-content-start">
+	<div class="col-12 col-sm-6 order-1">
+		<a href="">
+			<img src="13.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
+		</a>		
+	</div>
 
-
+</div>
 
 
 
