--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -484,15 +484,37 @@ document.getElementById("defaultOpen").click();
 <div id="txt_events" class="top_wrapper row justify-content-center" style="text-align:center;">
 	<div class="col-12"> <h5>События</h5> </div>
 </div>
-	  Сценарий церемонии награждения российского финала конкурса Imagine Cup
-2017. 
-	  imaginecup.png
+<div class="contentblock row justify-content-center">
+	<div class="textblock_right col-12 col-sm-8 col-lg-6">
+		<a href="https://news.microsoft.com/ru-ru/features/pobediteli-imagine-cup-2017/">
+			<h3>Сценарий церемонии награждения российского финала конкурса Imagine Cup 2017. </h3>
+		</a>
+	</div>
+	<div class="col-12 col-sm-8 col-lg-6">
+		<a href="https://news.microsoft.com/ru-ru/features/pobediteli-imagine-cup-2017/">
+			<img src="imaginecup.png" class="imageblock_left img-fluid" alt="Responsive image">
+		</a>
+	</div>
+</div>
+	  
 
 <div id="lections" class="row justify-content-center" style="padding-top:25px;">
 		<div class="col-12 col-sm-8 col-lg-6"> <h1>ЛЕКЦИИ</h1> </div>
 </div>
-	  Я составила и прочла авторский курс лекций о кино.
-	  tnp.png
+<div class="contentblock row justify-content-center">
+	<div class="textblock_right col-12 col-sm-8 col-lg-6">
+		<a href="https://theoryandpractice.ru/seminars/96746-smotret-interpretirovat-indie-movies--pokaz-filma-rebekki-miller-plan-meggi-26-2">
+			<h3>Я составила и прочла авторский курс лекций о кино.</h3>
+		</a>
+	</div>
+	<div class="col-12 col-sm-8 col-lg-6">
+		<a href="https://theoryandpractice.ru/seminars/96746-smotret-interpretirovat-indie-movies--pokaz-filma-rebekki-miller-plan-meggi-26-2">
+			<img src="tnp.png" class="imageblock_left img-fluid" alt="Responsive image">
+		</a>
+	</div>
+</div>
+	  
+	  
 
 <div id="contacts" class="row justify-content-center" style="padding-top:25px;">
 		<div class="col-12 col-sm-8 col-lg-6"> <h1>КОНТАКТЫ</h1> </div>
