--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -397,7 +397,7 @@ document.getElementById("defaultOpen").click();
 
 
 		
-<div class="contentblock-comm row justify-content-center">
+<!--<div class="contentblock-comm row justify-content-center">
 	<div class="col-12 col-sm-6 order-2">
 		<a href="">
 			<img src="Снимок экрана 2018-04-04 в 15.24.13.png" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
@@ -408,8 +408,20 @@ document.getElementById("defaultOpen").click();
 			<img src="Снимок экрана 2018-04-04 в 15.21.36.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
 		</a>
 	</div>
-</div>
+</div>-->
 
+<div class="contentblock-comm row justify-content-center">
+	<div class="col-12 col-sm-6 order-1">
+		<a href="">
+			<img src="01.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
+		</a>		
+	</div>
+	<div class="col-12 col-sm-6 order-2">
+		<a href="">
+			<img src="02.png" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
+		</a>
+	</div>
+</div>
 <div class="contentblock-comm row justify-content-center">
 	<div class="col-12 col-sm-6 order-1">
 		<a href="">
@@ -458,22 +470,10 @@ document.getElementById("defaultOpen").click();
 		</a>
 	</div>
 </div>
-<div class="contentblock-comm row justify-content-center">
-	<div class="col-12 col-sm-6 order-1">
-		<a href="">
-			<img src="11.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
-		</a>		
-	</div>
-	<div class="col-12 col-sm-6 order-2">
-		<a href="">
-			<img src="12.png" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
-		</a>
-	</div>
-</div>
 <div class="contentblock-comm row justify-content-start">
 	<div class="col-12 col-sm-6 order-1">
 		<a href="">
-			<img src="13.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
+			<img src="11.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
 		</a>		
 	</div>
 
