--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -490,6 +490,8 @@ document.getElementById("defaultOpen").click();
 			<h3>Сценарий церемонии награждения российского финала конкурса Imagine Cup 2017. </h3>
 		</a>
 	</div>
+</div>
+<div class="contentblock row justify-content-center">
 	<div class="col-12 col-sm-8 col-lg-6">
 		<a href="https://news.microsoft.com/ru-ru/features/pobediteli-imagine-cup-2017/">
 			<img src="imaginecup.png" class="imageblock_left img-fluid" alt="Responsive image">
@@ -507,6 +509,8 @@ document.getElementById("defaultOpen").click();
 			<h3>Я составила и прочла авторский курс лекций о кино.</h3>
 		</a>
 	</div>
+</div>
+<div class="contentblock row justify-content-center">
 	<div class="col-12 col-sm-8 col-lg-6">
 		<a href="https://theoryandpractice.ru/seminars/96746-smotret-interpretirovat-indie-movies--pokaz-filma-rebekki-miller-plan-meggi-26-2">
 			<img src="tnp.png" class="imageblock_left img-fluid" alt="Responsive image">
