--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -492,14 +492,15 @@ document.getElementById("defaultOpen").click();
 	</div>
 </div>
 <div class="contentblock row justify-content-center">
-	<div class="col-12 col-sm-8 col-lg-6">
+	<div class="col-12 col-sm-8">
 		<a href="https://news.microsoft.com/ru-ru/features/pobediteli-imagine-cup-2017/">
-			<img src="imaginecup.png" class="imageblock_left img-fluid" alt="Responsive image">
+			<img src="imaginecup.png" class="hoverpics imageblock_left img-fluid" alt="Responsive image">
 		</a>
 	</div>
 </div>
 	  
-
+<br>
+<br>
 <div id="lections" class="row justify-content-center" style="padding-top:25px;">
 		<div class="col-12 col-sm-8 col-lg-6"> <h1>ЛЕКЦИИ</h1> </div>
 </div>
@@ -511,26 +512,43 @@ document.getElementById("defaultOpen").click();
 	</div>
 </div>
 <div class="contentblock row justify-content-center">
-	<div class="col-12 col-sm-8 col-lg-6">
+	<div class="col-12 col-sm-8">
 		<a href="https://theoryandpractice.ru/seminars/96746-smotret-interpretirovat-indie-movies--pokaz-filma-rebekki-miller-plan-meggi-26-2">
-			<img src="tnp.png" class="imageblock_left img-fluid" alt="Responsive image">
+			<img src="tnp.png" class="hoverpics imageblock_left img-fluid" alt="Responsive image">
 		</a>
+		<p>Ссылка на страницу мероприятия «Вконтакте» <a href="https://vk.com/filmstalking">[VK]</a>.</p>
 	</div>
 </div>
 	  
 	  
-
+<br>
+<br>
 <div id="contacts" class="row justify-content-center" style="padding-top:25px;">
 		<div class="col-12 col-sm-8 col-lg-6"> <h1>КОНТАКТЫ</h1> </div>
 </div>
-
-	  Алина Кузьо
-Редактор, режиссер промо
-+7 (911) 847-21-63
-alinakuzio@yandex.ru
-ВКонтакте
-facebook
-медиум
+<br>
+	  <div class="contentblock row justify-content-center">
+	<div class="textblock_right col-12 col-sm-8 col-lg-6">
+		
+			<h3>Алина Кузьо</h3>
+		<br>
+			<h5>Редактор, режиссер промо</h5>
+		<br>
+		<ul>
+			<li>+7 (911) 847-21-63</li>
+			<li><a href="alinakuzio@yandex.ru3">alinakuzio@yandex.ru3</a></li>
+			<li><a href="https://vk.com/alina_kuzio">ВКонтакте</a></li>
+			<li><a href="https://www.facebook.com/kuzioalina">facebook</a></li>
+			<li><a href="https://medium.com/@meh_wow_films/latest">Medium</a></li>
+		</ul>
+		
+	</div>
+</div>
+	  
+	  <br>
+	  <br>
+	  <br>
+	  <br>
 
 
   </body>
