--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -290,7 +290,7 @@ document.getElementById("defaultOpen").click();
 	</div>
 </div>
 
-<div id="txt_other" class="top_wrapper row justify-content-center" style="text-align:center;">
+<div class="top_wrapper row justify-content-center" style="text-align:center;">
 	<div class="col-12"> <h5>Июньский дайджест премьер журнала Cineticle</h5> </div>
 </div>
 	
