--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -534,6 +534,8 @@ document.getElementById("defaultOpen").click();
 		<br>
 			<h5>Редактор, режиссер промо</h5>
 		<br>
+	</div>
+	<div class="textblock_right col-12 col-sm-4">
 		<ul>
 			<li>+7 (911) 847-21-63</li>
 			<li><a href="alinakuzio@yandex.ru3">alinakuzio@yandex.ru3</a></li>
