--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -44,7 +44,7 @@ h1 {font-family:intro-bc;font-weight:bold;text-align: center;}
 
 h2 {font-family:intro-ta;font-weight:bold;}
 
-	h3 {font-family:intro-ta;font-weight:bold;text-transform:uppercase;}
+	h3 {font-family:intro-ta;font-weight:bold; /* text-transform:uppercase;*/ }
 	a {color:black; text-decoration:none;}
 	a:hover { color:#0f2199; text-decoration:none;}
 
@@ -422,7 +422,7 @@ document.getElementById("defaultOpen").click();
 		</a>
 	</div>
 </div>
-<div class="contentblock-comm row justify-content-center">
+<!-- <div class="contentblock-comm row justify-content-center">
 	<div class="col-12 col-sm-6 order-1">
 		<a href="">
 			<img src="03.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
@@ -433,7 +433,7 @@ document.getElementById("defaultOpen").click();
 			<img src="04.png" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
 		</a>
 	</div>
-</div>
+</div> -->
 <div class="contentblock-comm row justify-content-center">
 	<div class="col-12 col-sm-6 order-1">
 		<a href="">
@@ -446,7 +446,7 @@ document.getElementById("defaultOpen").click();
 		</a>
 	</div>
 </div>
-<div class="contentblock-comm row justify-content-center">
+<!-- <div class="contentblock-comm row justify-content-center">
 	<div class="col-12 col-sm-6 order-1">
 		<a href="">
 			<img src="07.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
@@ -457,11 +457,11 @@ document.getElementById("defaultOpen").click();
 			<img src="08.png" class="hoverpics imageblock_right img-fluid float-left" alt="Responsive image">
 		</a>
 	</div>
-</div>
+</div> -->
 <div class="contentblock-comm row justify-content-center">
 	<div class="col-12 col-sm-6 order-1">
 		<a href="">
-			<img src="10.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
+			<img src="09.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
 		</a>		
 	</div>
 	<div class="col-12 col-sm-6 order-2">
@@ -470,14 +470,14 @@ document.getElementById("defaultOpen").click();
 		</a>
 	</div>
 </div>
-<div class="contentblock-comm row justify-content-start">
+<!--<div class="contentblock-comm row justify-content-start">
 	<div class="col-12 col-sm-6 order-1">
 		<a href="">
 			<img src="09.png" class="hoverpics imageblock_left img-fluid float-right" alt="Responsive image">
 		</a>		
 	</div>
 
-</div>
+</div>-->
 
 
 
@@ -506,8 +506,8 @@ document.getElementById("defaultOpen").click();
 </div>
 <div class="contentblock row justify-content-center">
 	<div class="textblock_right col-12 col-sm-8 col-lg-6">
-		<a href="https://theoryandpractice.ru/seminars/96746-smotret-interpretirovat-indie-movies--pokaz-filma-rebekki-miller-plan-meggi-26-2">
-			<h3>Я составила и прочла авторский курс лекций о кино.</h3>
+		<a href="https://vk.com/filmstalking">
+			<h3>Авторский курс лекций о кино</h3>
 		</a>
 	</div>
 </div>
@@ -516,7 +516,7 @@ document.getElementById("defaultOpen").click();
 		<a href="https://theoryandpractice.ru/seminars/96746-smotret-interpretirovat-indie-movies--pokaz-filma-rebekki-miller-plan-meggi-26-2">
 			<img src="tnp.png" class="hoverpics imageblock_left img-fluid" alt="Responsive image">
 		</a>
-		<p>Ссылка на страницу мероприятия «Вконтакте» <a href="https://vk.com/filmstalking">[VK]</a>.</p>
+		<p>Ссылка на страницу мероприятия на «Теориях и практиках»: <a href="https://theoryandpractice.ru/seminars/96746-smotret-interpretirovat-indie-movies--pokaz-filma-rebekki-miller-plan-meggi-26-2">https://theoryandpractice.ru/</a>.</p>
 	</div>
 </div>
 	  
@@ -531,8 +531,6 @@ document.getElementById("defaultOpen").click();
 	<div class="textblock_right col-12 col-sm-8 col-lg-6">
 		
 			<h3>Алина Кузьо</h3>
-		<br>
-			<h5>Редактор, режиссер промо</h5>
 		<br>
 	</div>
 	<div class="textblock_right col-12 col-sm-4">
