--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -57,7 +57,7 @@ body {background: url("example1.jpg") no-repeat left top;
 	body {font-family:intro-lr;
 	font-weight:bold;
 	}
-
+	.ticket {position: absolute;}
 .nav {background-color: #f2f2f2; text-decoration:none;}
 
 .nav a {color:black; font-weight:bold; padding-top:2px;  padding-bottom:2px; text-transform:uppercase;} 
@@ -184,7 +184,8 @@ function openVideo(evt, listName) {
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
 </script>
-
+<div class="ticket">
+	  </div>	
 	<div class="row justify-content-center header_block">
 		<div class="header_title col-12">
 			<h1 class="header_title_h">АЛИНА КУЗЬО</h1>
@@ -505,7 +506,7 @@ document.getElementById("defaultOpen").click();
 <div class="contentblock row justify-content-center">
 	<div class="textblock_right col-12 col-sm-8 col-lg-6">
 		<a href="https://vk.com/filmstalking">
-			<h3>Авторский курс лекций о кино</h3>
+			<h3 style="text-align:center;">Авторский курс лекций о кино</h3>
 		</a>
 	</div>
 </div>
