--- a/!ALINAK/index.html
+++ b/!ALINAK/index.html
@@ -806,18 +806,17 @@ document.getElementById("defaultOpen").click();
 		  
 </div>
 	  <script>
-		  /*MEDIUM*/
-	$(function () {
+$(function () {
 	var $content = $('#jsonContent');
 	var data = {
-		rss_url: 'https://medium.com/feed/@meh_wow_films'
+		rss_url: 'https://medium.jasonmdesign.com/feed'
 	};
 	$.get('https://api.rss2json.com/v1/api.json', data, function (response) {
 		if (response.status == 'ok') {
 			var output = '';
 			$.each(response.items, function (k, item) {
 				var visibleSm;
-				if(k < 2){
+				if(k < 3){
 					visibleSm = '';
 				 } else {
 					 visibleSm = ' visible-sm';
@@ -841,7 +840,7 @@ document.getElementById("defaultOpen").click();
 				trimmedString = trimmedString.substr(0, Math.min(trimmedString.length, trimmedString.lastIndexOf(" ")))
 				output += '<p>' + trimmedString + '...</p>';
 				output += '</div></div></div>';
-				return k < 2;
+				return k < 3;
 			});
 			$content.html(output);
 		}
